WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40780
[Qt] Fail to compile with ENABLE_JIT=0 on Symbian
https://bugs.webkit.org/show_bug.cgi?id=40780
Summary
[Qt] Fail to compile with ENABLE_JIT=0 on Symbian
Chang Shu
Reported
2010-06-17 08:52:00 PDT
When disabling JIT using command: WebKitTools/Scripts/build-webkit --qt --symbian "JAVASCRIPTCORE_JIT=no" and sbs -c armv5_urel, a link error is reported complaining missing symbol of systemRelease in ExecutableAllocator.h One problem is we need a "if ENABLE(JIT)" guard in ExecutableAllocator.h. The 2nd problem is ENABLE_JIT is not set in WebCore and ExecutableAllocator.h is included with JIT enabled. The compiler on symbian reports error on static functions.
Attachments
fix patch
(4.01 KB, patch)
2010-06-17 08:59 PDT
,
Chang Shu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chang Shu
Comment 1
2010-06-17 08:59:53 PDT
Created
attachment 58998
[details]
fix patch
Chang Shu
Comment 2
2010-06-17 10:47:45 PDT
Comment on
attachment 58998
[details]
fix patch committed patch manually.
r61338
. cleared flags.
Lucas De Marchi
Comment 3
2010-07-19 05:07:55 PDT
Don't forget to close the bug.
Laszlo Gombos
Comment 4
2010-07-22 23:26:06 PDT
1./ Wouldn't the following work (we use DEFINES for all the other features)? WebKitTools/Scripts/build-webkit --qt --symbian "DEFINES+=ENABLE_JIT=0" 2./ Also we normally put common build logic into WebKit.pri (not sure if we need another common.pri).
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug