WebCore/WebCore.pri
@@ -1,3 +1,6 @@
+
+include(../common.pri)
+
 CONFIG(standalone_package) {
     isEmpty(WC_GENERATED_SOURCES_DIR):WC_GENERATED_SOURCES_DIR = $$PWD/generated
 } else {
